--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -1,3 +1,12 @@
 body {
-  padding-top: 61px;  /* Move body of page below navbar. */
+
+}
+
+.ui.menu {
+  background-color: #A1A5B0;
+  color: #080E1A;
+}
+
+#login-sign-in-link {
+  color: #080E1A;
 }
