Added login page, fixed up register format

--- a/app/imports/ui/layouts/register.html
+++ b/app/imports/ui/layouts/register.html
@@ -3,9 +3,9 @@
 <template name="Register">
   <form class="ui form">
       <div class="field">
-        <input type="text" name="email" placeholder="UH Username">
+        <input type="text" name="user" placeholder="UH Username">
       </div>
-      <div>
+      <div class="field">
         <input type="password" name="password" placeholder="UH Password">
       </div>
       <div class="field">
