--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -3,6 +3,7 @@
   <div style="margin-top: 0px; border-radius: 0px; border: none" class="ui borderless menu">
     <div class="ui container">
       <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Campus Jam</h1></a>
+      <a class="{{ isActiveRoute 'Login_Page'}} item" href="{{ pathFor 'Login_Page' }}">Login</a>
       {{#if currentUser}}
         <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff </a>
         <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
