--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -5,6 +5,7 @@
       <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Campus Jam</h1></a>
       <a class="{{ isActiveRoute 'Login_Page'}} item" href="{{ pathFor 'Login_Page' }}">Login</a>
       <a class="{{ isActiveRoute 'User_Home_Page'}} item" href="{{ pathFor 'User_Home_Page' }}">User Home</a>
+      <a class="{{ isActiveRoute 'Admin_Home_Page'}} item" href="{{ pathFor 'Admin_Home_Page' }}">Admin Home</a>
       {{#if currentUser}}
         <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff </a>
         <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
